--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,10 @@ services:
       - "3000:3000"
     depends_on:
       - db
+  adminer:
+    image: adminer
+    ports:
+      - "8080:8080"
   js:
     image: rails_template:latest
     command: yarn build --watch
