--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,16 @@ services:
       - node_modules:/myapp/node_modules
     ports:
       - "3000:3000"
+    environment:
+      SELENIUM_DRIVER_URL: http://selenium_chrome:4444/wd/hub
+      CAPYBARA_SERVER_HOST: web
+      CAPYBARA_APP_HOST: http://web
     depends_on:
       - db
+
+  selenium_chrome:
+    image: selenium/standalone-chrome-debug
+
   adminer:
     image: adminer
     ports:
@@ -38,6 +46,8 @@ services:
       - bundle:/usr/local/bundle
       - node_modules:/myapp/node_modules
     tty: true
+
+
 volumes:
   db:
   bundle:
