--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,3 +23,6 @@ Layout/LineLength:
 Hc/RailsSpecificActionName:
   Exclude:
     - app/controllers/users/omniauth_callbacks_controller.rb
+RSpec/ExampleLength:
+  Max: 10
+
